# rust-benchmarks

benchmarks/: cargo-verify  mkcargo  run-mirai
benchmarks/smack-regressions/functions/: closure_fail.rs
benchmarks/smack-regressions/symbolic/: arith.rs  binaryheap.rs  binaryheap_fail1.rs  binaryheap_fail2.rs  btreemap.rs  btreemap_fail.rs  btreemap_fail1.rs  btreemap_fail2.rs  btreeset.rs  btreeset_fail.rs  btreeset_fail1.rs  compose.rs  dynamic.rs  enumeration.rs  linkedlist.rs  linkedlist_fail.rs  linkedlist_fail1.rs  propfilter.rs  propfiltermap.rs  propfiltermap_fail1.rs  propflatmap.rs  propflatmap_fail1.rs  propindflatmap.rs  propindflatmap2.rs  propindflatmap2_fail1.rs  propmap.rs  propmap_fail1.rs  propmapinto.rs  propmapinto_fail1.rs  propunion.rs  propunion_fail1.rs  range1.rs  range1_overflow.rs  range2.rs  test2.rs  tuple.rs  vec.rs  vec_fail.rs  vec_fail1.rs  vecdeque.rs  (+3 more)
klee-annotations/: Cargo.toml  README.md
klee-annotations/src/: lib.rs
propverify/: AUTHORS  Cargo.toml  README.md
propverify/src/: lib.rs  strategy.rs
symbolic/: Cargo.toml  README.md  config
symbolic/src/: lib.rs
symbolic2/: Cargo.toml  README.md
symbolic2/src/: lib.rs  strategy.rs
verifier/: Cargo.toml
verifier/src/: lib.rs
