[package]
name = "klee-annotations"
version = "0.1.0"
authors = ["Alastair Reid <adreid@google.com>"]
edition = "2018"
description = "KLEE symbolic execution engine annotation library."
categories = ["development-tools::testing"]
keywords = ["klee", "testing"]
license = "MIT OR Apache-2.0"

[dependencies]
