[package]
name = "symbolic2"
version = "0.1.0"
authors = ["Alastair Reid <adreid@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klee-annotations = { path = "../klee-annotations", features = [ "verifier-panic-handler" ] }
